Responsive issue + layout issue resolved

--- a/asserts/css/nice-select.css
+++ b/asserts/css/nice-select.css
@@ -123,7 +123,6 @@
   box-sizing: border-box;
   margin-top: 4px;
   opacity: 0;
-  overflow: hidden;
   padding: 0;
   pointer-events: none;
   position: absolute;
@@ -162,7 +161,7 @@
 .nice-select .option:hover,
 .nice-select .option.focus,
 .nice-select .option.selected.focus {
-  background-color: #f6f6f6;
+  background: #ebf6ff;
 }
 
 .nice-select .option.selected {
